--- a/noapi/pom.xml
+++ b/noapi/pom.xml
@@ -63,7 +63,7 @@
     <dependencies>
         <dependency><groupId>net.thevpc.nuts</groupId><artifactId>nuts-lib</artifactId><version>0.8.5.0</version></dependency>
         <dependency>
-            <groupId>net.thevpc.nuts.lib</groupId>
+            <groupId>net.thevpc.nmarkdown</groupId>
             <artifactId>nmarkdown</artifactId>
             <version>0.8.5.0</version>
         </dependency>
