--- a/noapi/pom.xml
+++ b/noapi/pom.xml
@@ -62,33 +62,16 @@
 
     <dependencies>
         <dependency><groupId>net.thevpc.nuts</groupId><artifactId>nuts-lib</artifactId><version>0.8.5.0</version></dependency>
-        <dependency>
-            <groupId>net.thevpc.nmarkdown</groupId>
-            <artifactId>nmarkdown</artifactId>
-            <version>0.8.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jruby</groupId>
-            <artifactId>jruby-complete</artifactId>
-            <version>1.7.26</version>
-        </dependency>
-        <dependency>
-            <groupId>org.asciidoctor</groupId>
-            <artifactId>asciidoctorj</artifactId>
-            <version>1.5.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.asciidoctor</groupId>
-            <artifactId>asciidoctorj-pdf</artifactId>
-            <version>1.5.0-alpha.16</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.30</version>
-        </dependency>
+        <dependency><groupId>net.thevpc.nmarkdown</groupId><artifactId>nmarkdown</artifactId><version>0.8.5.0</version></dependency>
         <dependency><groupId>net.thevpc.nuts</groupId><artifactId>nuts-runtime</artifactId><version>0.8.5.0</version></dependency>
+
+<!--        <dependency><groupId>org.jruby</groupId><artifactId>jruby-complete</artifactId><version>1.7.26</version></dependency>-->
+<!--        <dependency><groupId>org.asciidoctor</groupId><artifactId>asciidoctorj</artifactId><version>1.5.5</version></dependency>-->
+<!--        <dependency><groupId>org.asciidoctor</groupId><artifactId>asciidoctorj-pdf</artifactId><version>1.5.0-alpha.16</version></dependency>-->
+
+        <dependency><groupId>org.jruby</groupId><artifactId>jruby-complete</artifactId><version>9.4.12.0</version></dependency>
+        <dependency><groupId>org.asciidoctor</groupId><artifactId>asciidoctorj</artifactId><version>2.5.13</version></dependency>
+        <dependency><groupId>org.asciidoctor</groupId><artifactId>asciidoctorj-pdf</artifactId><version>1.5.0-alpha.16</version></dependency>
 
     </dependencies>
     <distributionManagement>
