--- a/noapi/pom.xml
+++ b/noapi/pom.xml
@@ -59,7 +59,7 @@
     </licenses>
 
     <dependencies>
-        <dependency><groupId>net.thevpc.nuts</groupId><artifactId>nuts-lib</artifactId><version>0.8.6.0</version></dependency>
+        <dependency><groupId>net.thevpc.nuts</groupId><artifactId>nuts</artifactId><version>0.8.6</version></dependency>
         <dependency><groupId>net.thevpc.nmarkdown</groupId><artifactId>nmarkdown</artifactId><version>0.8.6.0</version></dependency>
         <dependency><groupId>net.thevpc.nuts</groupId><artifactId>nuts-runtime</artifactId><version>0.8.6.0</version></dependency>
 
